4.7.0 (Work-in-progress): API errors now throw exceptions with the last error
message (instead of an integer error code); new API to retrieve "homogeneous"
model-based data, for improved Python performance; improved VTK reader; added
initial support for MMG 5; small bug fixes.

4.6.0 (June 22, 2020): new options to only generate initial 2D or 3D meshes
(without node insertion), and to only mesh non-meshed entities; added ability to
only remesh parts of discrete models; added support for mesh size fields and
embedded entities in HXT; improved reparametrization and partitioning code; new
OCC API functions to reduce the number of synchronizations for complex models;
new OCC spline surface interfaces; new functions and options to control the
first tag of entities, nodes and elements; fixed duplicated entities in STEP
output; improved mesh subdivision and high-order pipeline; MED output now
preserves node and element tags; small bug fixes.

* Incompatible API changes: new optional arguments to mesh/clear,
  mesh/createTopology, mesh/createGeometry, occ/addThruSections,
  mesh/getPeriodicNodes; new arguments to mesh/getBasisFunctions; removed
  mesh/preallocateBasisFunctions, mesh/precomputeBasisFunctions and
  mesh/getBasisFunctionsForElements; renamed occ/setMeshSize as occ/mesh/setSize

4.5.6 (March 30, 2020): better calculation of OCC bounding boxes using STL; API
tutorials; small bug fixes.

4.5.5 (March 21, 2020): tooltips in GUI to help discovery of scripting options;
fixed MED IO of high-order elements; fixed OCC attribute search by bounding box;
fix parsing of mac-encoded scripts; new RecombineMesh command; added support for
extrusion of mixed-dimension entities with OCC; small bug fixes.

4.5.4 (February 29, 2020): periodic mesh optimization now ensures that the
master mesh is not modified; code cleanup; small bug fixes.

4.5.3 (February 22, 2020): improved positioning of corresponding nodes on