@@ -23,6 +23,7 @@
 #include "mathEvaluator.h"
 #include "Options.h"
 #include "StringUtils.h"
+#include "fullMatrix.h"
 
 static void saturate(int nb, double **val, double vmin, double vmax, int i0 = 0,
                      int i1 = 1, int i2 = 2, int i3 = 3, int i4 = 4, int i5 = 5,
